--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -29,7 +29,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
-            android:text="欢迎使用吐槽词典"
+            android:text="手机注册"
             android:textColor="#F4DB36"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -54,8 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/password"
@@ -75,11 +74,11 @@
             <Button
                 android:id="@+id/passwordButton"
                 style="@android:style/Widget.Button"
-                android:background="@drawable/hot_word_tag_shape1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
+                android:background="@drawable/hot_word_tag_shape1"
 
                 android:enabled="true"
                 android:text="获取验证码"
@@ -93,44 +92,15 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <Button
+            android:id="@+id/signInButton"
+            style="@android:style/Widget.Button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/signInButton"
-                style="@android:style/Widget.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_gravity="left"
-                android:background="@drawable/hot_word_tag_shape1"
-                android:text="注册" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <Button
-
-                android:id="@+id/loginButton"
-                style="@android:style/Widget.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:background="@drawable/hot_word_tag_shape1"
-                android:enabled="true"
-                android:text="登录"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password" />
-
-        </LinearLayout>
+            android:layout_gravity="left"
+            android:background="@drawable/hot_word_tag_shape1"
+            android:text="注册" />
 
     </LinearLayout>
 </RelativeLayout>
