--- a/app/src/main/res/layout/activity_hot_word.xml
+++ b/app/src/main/res/layout/activity_hot_word.xml
@@ -662,26 +662,33 @@
                 android:background="@drawable/kind_shape"
                 android:orientation="vertical">
 
-                <View
-                    android:layout_width="8dp"
-                    android:layout_height="20dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="0dp"
-                    android:background="@color/background"></View>
-                <!--小标题-->
-                <TextView
-                    android:id="@+id/relevant_content_head_line"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="60dp"
-                    android:layout_marginTop="1dp"
-                    android:layout_weight="1"
-                    android:textSize="20dp"
-                    android:text="相关槽点" />
+                    android:orientation="horizontal">
+                    <View
+                        android:layout_width="8dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="0dp"
+                        android:background="@color/background"></View>
+                    <!--小标题-->
+                    <TextView
+                        android:id="@+id/relevant_content_head_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="60dp"
+                        android:layout_marginTop="1dp"
+                        android:layout_weight="1"
+                        android:textSize="20dp"
+                        android:text="相关槽点" />
+                </LinearLayout>
+
+
 
                 <View
                     android:layout_width="match_parent"
