--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -5,21 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
+        android:layout_gravity="center"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="25dp"
         android:src="@mipmap/person02"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 
     <TextView
+        android:id="@+id/nick_name"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="match_parent"
+        android:textSize="30sp"
+        android:textColor="@color/smssdk_black"
         android:layout_height="40dp"
         android:layout_marginRight="50dp" />
+</LinearLayout>
+
 
     <ListView
         android:layout_marginTop="25dp"
